# app/Http/Controllers/Controller.php
@@ -6,14 +6,24 @@ namespace App\Http\Controllers;
  * @OA\Info(
  *      version="1.0.0",
  *      title="Dokumentasi API",
- *      description="Whatsapp Clone API Documentation",
+ *      description="Whatsapp Clone API Documentation, more details at https://github.com/satrijo/whatsapp-clone/blob/main/README.md",
+ *
  *      @OA\Contact(
  *          email="mail@satrio.dev"
  *      ),
+ *
  *      @OA\License(
  *          name="Apache 2.0",
  *          url="http://www.apache.org/licenses/LICENSE-2.0.html"
  *      )
+ * )
+ *
+ * * @OA\SecurityScheme(
+ *     securityScheme="sanctum",
+ *     type="http",
+ *     scheme="bearer",
+ *     bearerFormat="JWT",
+ *     description="Input your Bearer token in the format 'Bearer {token}' to access authenticated endpoints"
  * )
  *
  * @OA\Server(
@@ -21,7 +31,6 @@ namespace App\Http\Controllers;
  *      description="Demo API Server"
  * )
  */
-
 abstract class Controller
 {
     //
