# storage/api-docs/api-docs.json
@@ -775,6 +775,16 @@
             }
         }
     },
+    "components": {
+        "securitySchemes": {
+            "sanctum": {
+                "type": "http",
+                "description": "Input your Bearer token in the format 'Bearer {token}' to access authenticated endpoints",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
+            }
+        }
+    },
     "tags": [
         {
             "name": "Chatrooms",
